# Quick-Backend

./: .gitignore  LICENSE  README.md  a0size.sty  backend.jl  backend.py  backend.rb  bibliography.bib  build-tests.sh  defunctionalise.exrbnf  example.sh  main.tex  mk.sh  quick-backend.cabal  run-tests.sh  simplest.exrbnf  stack.yaml  view.sh
examples/: 2.idr  2.jl  2.py  2.qb  hello_world.idr  hello_world.jl  hello_world.py  hello_world.qb  hello_world.rb  idris_rts.rb  match.idr  match.jl  match.py  match.qb  match.rb  rts.jl  rts.py  rts.rb  testcases.idr  testcases.jl  testcases.native-symbol.jl  testcases.native-symbol.qb  testcases.native-symbol.rb  testcases.py  testcases.qb  testcases.rb
figs/: fancychapters.sty
libs/: clean_ibc.py  quick-backend.ipkg  test.idr
libs/QB/: FFI.idr
poster/: a1poster.cls  bibliography.bib  defun-left.exrbnf  defun-right.exrbnf  main.tex  simplest-left.exrbnf  simplest-right.exrbnf
src/: Main.hs
src/IRTS/: CodegenQB.hs  preserve.txt
src/Quick/: Dump.hs  Lower.hs  Reusable.hs  Row.hs  SDDecl.hs  St.hs  SymbolEmulation.hs  Weakest.hs
tools/: prim-fn-gen.py
